--- a/project_forms.html
+++ b/project_forms.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <script>var submitted=false;</script>
-    <iframe name="hidden_iframe" id="hidden_iframe" style="display: none" onload="if(submitted){window.location='https://www.google.com/';}"></iframe>
+    <iframe name="hidden_iframe" id="hidden_iframe" style="display: none" onload="if(submitted){window.location='submitted.html';}"></iframe>
     <header>
       <img id="logo" src="image/logo.png" alt="logo" />
       <nav>
