--- a/project_forms.html
+++ b/project_forms.html
@@ -12,15 +12,19 @@
     <script>var submitted=false;</script>
     <iframe name="hidden_iframe" id="hidden_iframe" style="display: none" onload="if(submitted){window.location='submitted.html';}"></iframe>
     <header>
-      <img id="logo" src="image/logo.png" alt="logo" />
+      <img class="logo" src="image/logo.png" alt="logo" />
       <nav>
         <ul>
-          <li><a id="home" href="" >Home</a></li>
+          <li><a class="home" href="" >Home</a></li>
           <li><a href="result.html">Results</a></li>
         </ul>
       </nav>
-      <h1 id="title">Project Forms</h1>
-      <p id="description">This is a sample form using only html and css.</p>
+      <div class="header-container">
+        <h1 class="title">Project Forms</h1>
+        <p class="description">
+          This Project demonstrates client-side validation, responsive web design and web accessibility using HTML and CSS. Go on try it.
+        </p>
+      </div>
     </header>
     <main>
       <form action="https://docs.google.com/forms/u/1/d/e/1FAIpQLSeQacdu1i2YE7_U7zioLxZKdzWRvwBiIMeTNJoHSpE1VKy4VA/formResponse"
