--- a/submitted.html
+++ b/submitted.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,14 +9,14 @@
   </head>
   <body class="submitted-body">
     <header>
-      <img id="logo" src="image/logo.png" alt="logo" />
+      <img class="logo" src="image/logo.png" alt="logo" />
       <nav>
         <ul>
           <li><a href="project_forms.html">Project Forms</a></li>
           <li><a href="result.html">Results</a></li>
         </ul>
       </nav>
-      <h1 id="title">Thank you</h1>
+      <h1 class="title">Thank you</h1>
     </header>
     <main>
       <div class="sub-container">
@@ -24,7 +24,7 @@
         <p>For concerns contact: seaneidrefnatividad@gmail.com</p>
       </div>
     </main>
-    <footer>
+    <footer class="sub-footer">
       <p>Author: Sean Eidref D. Natividad</p>
     </footer>
   </body>
