--- a/project_forms.html
+++ b/project_forms.html
@@ -31,7 +31,7 @@
             id="survey-form" method="post" target="hidden_iframe" onsubmit="submitted=true">
         <fieldset>
           <label for="name" id="name-label">First Name:</label>
-          <input name="entry.241487195" type="text" id="name" pattern="[a-z]{2,16}" placeholder="e.g. juan" required/>
+          <input name="entry.241487195" type="text" id="name" pattern="[a-z,A-Z]{2,12}" placeholder="e.g. juan" required/>
           <span></span>
           <label for="email" id="email-label">Email:</label>
           <input name="entry.880137084" type="email" id="email" placeholder="e.g. juandelacruz@sample.com" required/>
