--- a/result.html
+++ b/result.html
@@ -27,10 +27,12 @@
         <iframe class="results-iframe" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQrJtJ0-_vHgp8o-ZseHHBHUGmz-ET6Mvf7-wlL8k2smpXoDbgdf8_soDGK2QdyJa96O8Bn28wNM_qg/pubchart?oid=1131983107&amp;format=interactive"></iframe>
         <iframe class="results-iframe" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQrJtJ0-_vHgp8o-ZseHHBHUGmz-ET6Mvf7-wlL8k2smpXoDbgdf8_soDGK2QdyJa96O8Bn28wNM_qg/pubchart?oid=1345067523&amp;format=interactive"></iframe>
         <iframe class="results-iframe" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQrJtJ0-_vHgp8o-ZseHHBHUGmz-ET6Mvf7-wlL8k2smpXoDbgdf8_soDGK2QdyJa96O8Bn28wNM_qg/pubchart?oid=1931665870&amp;format=interactive"></iframe>
-        <img class="results-img" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQrJtJ0-_vHgp8o-ZseHHBHUGmz-ET6Mvf7-wlL8k2smpXoDbgdf8_soDGK2QdyJa96O8Bn28wNM_qg/pubchart?oid=892507129&format=image" alt="Count of Names"/>
-        <img class="results-img" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQrJtJ0-_vHgp8o-ZseHHBHUGmz-ET6Mvf7-wlL8k2smpXoDbgdf8_soDGK2QdyJa96O8Bn28wNM_qg/pubchart?oid=1345067523&format=image" alt="Count of Occupation">
-        <img class="results-img" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQrJtJ0-_vHgp8o-ZseHHBHUGmz-ET6Mvf7-wlL8k2smpXoDbgdf8_soDGK2QdyJa96O8Bn28wNM_qg/pubchart?oid=1131983107&format=image" alt="Count of Age">
-        <img class="results-img" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQrJtJ0-_vHgp8o-ZseHHBHUGmz-ET6Mvf7-wlL8k2smpXoDbgdf8_soDGK2QdyJa96O8Bn28wNM_qg/pubchart?oid=1931665870&format=image" alt="Count of Gender">
+        <iframe class="results-iframe" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQrJtJ0-_vHgp8o-ZseHHBHUGmz-ET6Mvf7-wlL8k2smpXoDbgdf8_soDGK2QdyJa96O8Bn28wNM_qg/pubchart?oid=829482938&amp;format=interactive"></iframe>
+        <img loading="lazy" class="results-img" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQrJtJ0-_vHgp8o-ZseHHBHUGmz-ET6Mvf7-wlL8k2smpXoDbgdf8_soDGK2QdyJa96O8Bn28wNM_qg/pubchart?oid=892507129&format=image" alt="Count of Names"/>
+        <img loading="lazy" class="results-img" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQrJtJ0-_vHgp8o-ZseHHBHUGmz-ET6Mvf7-wlL8k2smpXoDbgdf8_soDGK2QdyJa96O8Bn28wNM_qg/pubchart?oid=1345067523&format=image" alt="Count of Occupation">
+        <img loading="lazy" class="results-img" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQrJtJ0-_vHgp8o-ZseHHBHUGmz-ET6Mvf7-wlL8k2smpXoDbgdf8_soDGK2QdyJa96O8Bn28wNM_qg/pubchart?oid=1131983107&format=image" alt="Count of Age">
+        <img loading="lazy" class="results-img" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQrJtJ0-_vHgp8o-ZseHHBHUGmz-ET6Mvf7-wlL8k2smpXoDbgdf8_soDGK2QdyJa96O8Bn28wNM_qg/pubchart?oid=1931665870&format=image" alt="Count of Gender">
+        <img loading="lazy" class="results-img" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQrJtJ0-_vHgp8o-ZseHHBHUGmz-ET6Mvf7-wlL8k2smpXoDbgdf8_soDGK2QdyJa96O8Bn28wNM_qg/pubchart?oid=829482938&format=image" alt="country chart">
       </div>
     </main>
     <footer>
